Ajout des UseEffect et de l'algo pour le rating des films

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -3,16 +3,17 @@
     height: 100vh;
     padding: 25px;
     flex-direction: column;
+    background-color: black;
 }
 .header{
     flex: 1;
-    background-color: red;
+  
 }
 .tv_show_detail{
     flex: 2;
-    background-color: blue;
+  
 }
 .recommendations{
     flex: 1;
-    background-color: green;
+    
 }
